@@ -17,14 +17,16 @@ import java.util.stream.Collectors;
 public class ItemService extends Servico {
 
     private final ItemRepository itemRepository;
+    private final ContaService contaService;
 
-    public ItemService(ItemRepository itemRepository, ObjectMapper objectMapper) {
+    public ItemService(ItemRepository itemRepository, ObjectMapper objectMapper, ContaService contaService) {
         super(objectMapper);
         this.itemRepository = itemRepository;
+        this.contaService = contaService;
     }
 
-    public List<ItemDTO> adicionar(List<ItemCreateDTO> itensCreateDTO) throws BancoDeDadosException, RegraDeNegocioException {
-
+    public List<ItemDTO> adicionar(List<ItemCreateDTO> itensCreateDTO, Integer numeroConta, String senha) throws BancoDeDadosException, RegraDeNegocioException {
+        contaService.validandoAcessoConta(numeroConta, senha);
         List<Item> itens = itensCreateDTO.stream()
                 .map(itemCreateDTO -> objectMapper.convertValue(itemCreateDTO, Item.class))
                 .toList();
@@ -48,10 +50,14 @@ public class ItemService extends Servico {
         return objectMapper.convertValue(this.itemRepository.retornarItem(idItem), ItemDTO.class);
     }
 
-    public List<ItemDTO> listar() throws BancoDeDadosException, RegraDeNegocioException {
-        return itemRepository.listar().stream()
-                .map(item -> objectMapper.convertValue(item, ItemDTO.class))
-                .collect(Collectors.toList());
+    public List<ItemDTO> listar(String login, String senha) throws BancoDeDadosException, RegraDeNegocioException {
+        if (login.equals("admin") && senha.equals("abacaxi")) {
+            return itemRepository.listar().stream()
+                    .map(item -> objectMapper.convertValue(item, ItemDTO.class))
+                    .toList();
+        }else{
+            throw new RegraDeNegocioException("Credenciais de Administrador inválidas!");
+        }
     }
 
     public List<ItemDTO> listarItensPorIdCompra(Integer idCompra) throws BancoDeDadosException, RegraDeNegocioException {
@@ -60,7 +66,8 @@ public class ItemService extends Servico {
                 .collect(Collectors.toList());
     }
 
-    public void deletar(Integer idItem) throws BancoDeDadosException {
-        itemRepository.deletar(idItem);
+    public boolean deletar(Integer idItem, Integer numeroConta, String senha) throws BancoDeDadosException, RegraDeNegocioException {
+        this.contaService.validandoAcessoConta(numeroConta, senha);
+        return itemRepository.deletar(idItem);
     }
 }
